# todo-list-architecture

./: .gitignore  pyproject.toml
todo_list/: app.py  db.py  main.py
todo_list/core/fake_database/: fake_db.py  model_base.py
todo_list/task/: routes.py
todo_list/task/dto/: add_task_dto.py  delete_task_dto.py  task_dto.py  tasks_dto.py
todo_list/task/models/: task.py
todo_list/task/repositories/: task_repository.py
todo_list/task/services/: task_service.py
