[tool.poetry]
name = "todo-list-architecture"
version = "0.1.0"
description = ""
authors = ["v3code <vitalik.w555@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "todo_list.app:main"